<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@drawable/cardview_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/character_list_image"
                    char_avatar="@{character.image_url}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:cropToPadding="true"
                    android:elevation="2dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/default_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/character_list_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorAccent"
                    android:elevation="5dp"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:text="@{character.name}"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/character_list_image"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="@+id/character_list_image"
                    app:layout_constraintTop_toTopOf="@+id/character_list_image" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{character.isRoleMain(character.role) ? View.VISIBLE : View.INVISIBLE}"
                    android:layout_marginTop="16dp"
                    android:elevation="5dp"
                    android:src="@android:drawable/star_big_on"
                    app:layout_constraintEnd_toEndOf="@+id/character_list_textview"
                    app:layout_constraintTop_toTopOf="@+id/character_list_textview"
                    android:contentDescription="@string/main_role" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_details"
                    android:layout_width="104dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/details"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:cornerRadius="20dp"
                    app:rippleColor="@color/colorAccent"
                    android:background="@color/colorAccent"
                    android:onClick="@{(view)->CharClick.onClick(view)}"
                    app:layout_constraintEnd_toEndOf="@+id/character_list_image"
                    app:layout_constraintStart_toStartOf="@+id/character_list_image"
                    app:layout_constraintTop_toBottomOf="@+id/character_list_image"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <data>

        <import type="android.view.View" />

        <variable
            name="character"
            type="com.dimi.animeapp.model.Character" />

        <variable
            name="CharClick"
            type="com.dimi.animeapp.adapter.CharacterListRecyclerView.ViewHolder" />
    </data>
</layout>