<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/constraint_bg_b">

        <LinearLayout
            android:id="@+id/linearWebImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageView"
                avatar="@{animeChar.image_url}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="1dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/default_image"
                android:contentDescription="@string/todo" />

            <WebView
                android:id="@+id/videoWebView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@android:color/transparent"
                android:elevation="1dp"
                android:padding="5dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="WebViewLayout">

            </WebView>
        </LinearLayout>

        <View
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/constraint_bg_a"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialTextView" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/close_button_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearWebImage" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="10dp"
            android:id="@+id/constraint_stars_episodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView">

            <LinearLayout
                android:layout_marginStart="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:foregroundGravity="center"
                    android:numStars="5"
                    android:paddingTop="5dp"
                    android:rating="@{animeChar.formatScoreString(animeChar.score)}"
                    android:theme="@style/RatingBarAnimDetails" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(animeChar.score)}"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_marginEnd="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:elevation="1dp"
                android:fontFamily="casual"
                android:text="@{DataBindingUtil.formatEpisodeNumberText(animeChar.episodes)}"
                android:textColor="@android:color/white"
                android:textSize="12sp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constr_lay_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="1dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anime_synopsys_text">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_button_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/show_trailer"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_button_all_characters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_characters"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorBackground"
            android:elevation="1dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@{animeChar.title}"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearWebImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/anime_synopsys_text"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:elevation="1dp"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:text="@{animeChar.synopis}"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_stars_episodes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="com.dimi.animeapp.util.DataBindingUtil" />

        <variable
            name="animeChar"
            type="com.dimi.animeapp.model.Anime" />

        <variable
            name="itemClickListener"
            type="com.dimi.animeapp.util.AnimeCharactersListClick" />

    </data>
</layout>